# fpgacapZero

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  conftest.py  core.json  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml
docs/: 01_overview.md  02_install.md  03_first_capture.md  04_rtl_integration.md  05_ela_core.md  06_eio_core.md  07_ejtag_axi_bridge.md  08_ejtag_uart_bridge.md  09_python_api.md  10_cli_reference.md  11_rpc_server.md  12_gui.md  13_register_map.md  14_transports.md  15_export_formats.md  16_versioning_and_release.md  17_troubleshooting.md  18_mcp_server.md  18_web_interface.md  19_axi_monitor.md  README.md
docs/specs/: architecture.md  axi_monitor.md  register_map.md  transport_api.md  waveform_schema.md
examples/arty_a7/: README.md  arty_a7.cfg  arty_a7.xdc  arty_a7_hs3.cfg  arty_a7_top.v  arty_a7_top.vhd  build.py  build_arty.tcl  build_arty_vhdl.tcl  build_vhdl.py  test_hw_integration.py
examples/brs_100_gw1nr9/: README.md  brs_100_gw1nr9.cfg  brs_100_gw1nr9_loc.cst  brs_100_gw1nr9_timing.sdc  brs_100_gw1nr9_top.v  build.py  build_brs_100_gw1nr9.tcl  test_hw_integration.py
examples/de25_nano/: README.md  build.py  build_de25_nano.tcl  de25_nano.qsf  de25_nano.sdc  de25_nano_top.v  run_hw_tests.py  test_hw_integration.py
host/: __init__.py
host/fcapz/: __init__.py  _version.py  (+14 more)
rtl/: dff_reg_sync.sv  dff_reg_sync.v  dff_sync.sv  dff_sync.v  dpram.v  fcapz_async_fifo.v  fcapz_axi_mon.v  fcapz_axi_mon_xilinx7.v  fcapz_core_manager.v  fcapz_debug_multi_xilinx7.v  fcapz_eio.v  fcapz_eio_ecp5.v  fcapz_eio_gowin.v  fcapz_eio_intel.v  fcapz_eio_polarfire.v  fcapz_eio_xilinx7.v  fcapz_eio_xilinxus.v  fcapz_ejtagaxi.v  fcapz_ejtagaxi_intel.v  fcapz_ejtagaxi_xilinx7.v  fcapz_ejtagaxi_xilinxus.v  fcapz_ejtaguart.v  fcapz_ejtaguart_intel.v  fcapz_ejtaguart_xilinx7.v  fcapz_ejtaguart_xilinxus.v  fcapz_ela.v  fcapz_ela_ecp5.v  fcapz_ela_gowin.v  fcapz_ela_ice40_spi.v  fcapz_ela_intel.v  fcapz_ela_manager.v  fcapz_ela_multi_xilinx7.v  fcapz_ela_polarfire.v  fcapz_ela_xilinx7.v  fcapz_ela_xilinxus.v  fcapz_regbus_mux.v  fcapz_spi_reg_iface.v  fcapz_version.vh  jtag_burst_read.v  jtag_pipe_iface.v  (+4 more)
scripts/: resource_comparison.tcl  xsdb_autocal_rnw.tcl
sim/: _runner_utils.py  bscane2_stub.v  bscane2_stub.vhd  gw_jtag_stub.v  jtagg_stub.v  lint_debug_multi_eio_only_xilinx7.v  lint_debug_multi_hetero_xilinx7.v  lint_eio_en_xilinx7.v  run_cocotb.py  run_cocotb_axi_mon.py  run_cocotb_ela.py  run_formal_hdl_parity.py  run_hdl_parity.py  run_sim.py  run_verilator_ela_coverage.py  run_verilator_lint.py  run_vhdl_sim.py  sld_virtual_jtag_stub.v  ujtag_stub.v  verilator_multidriven_bad.v  verilator_sv_syntax_bad.v  xpm_fifo_async_stub.v  xpm_fifo_async_stub.vhd
tb/: axi4_test_slave.v  chan_mux_tb.sv  fcapz_async_fifo_equiv_tb.v  fcapz_core_manager_tb.sv  fcapz_eio_tb.sv  fcapz_ejtagaxi_reset_regression_tb.sv  fcapz_ejtagaxi_tb.sv  fcapz_ejtaguart_tb.sv  fcapz_ela_bug_probe_tb.sv  fcapz_ela_config_matrix_tb.sv  fcapz_ela_func_cov.sv  fcapz_ela_tb.sv  fcapz_ela_xilinx7_single_chain_tb.sv  fcapz_spi_reg_iface_tb.sv  jtag_burst_read_tb.sv  jtag_pipe_iface_tb.sv  jtag_tap_gowin_tb.sv  trig_compare_tb.sv  xpm_fifo_async_stub.v
tests/: conftest.py  test_arty_a7_variant_sync.py  test_axi_monitor.py  test_capture_worker_continuous.py  test_cli_rpc_events.py  test_connect_errors.py  test_demo_dummy_capture.py  test_ejtagaxi.py  test_ejtagaxi_reset_rtl.py  test_ejtagaxi_rtl.py  test_ejtaguart.py  test_ejtaguart_rtl.py  test_ela_bug_probe_rtl.py  test_gtkw_writer.py  test_gui_capture_panel.py  test_gui_connection_panel.py  test_gui_hw_capture.py  test_gui_log_panel.py  test_gui_main_window.py  test_gui_settings.py  test_gui_surfer_wcp_reuse.py  test_gui_transport_from_settings.py  test_gui_viewer_registry.py  test_gui_viewers.py  test_host_stack.py  test_jtag_pipe_iface_assertion.py  test_litex_integration.py  test_mcp_server.py  test_multi_capture_wave.py  test_openocd_launcher.py  test_probe_file.py  test_rtl_fifo_equiv.py  test_surfer_command_writer.py  test_surfer_integration_smoke.py  test_toolbar_icons.py  test_transport.py  test_version.py  test_viewer_tile_split.py  test_waveform_preview.py  test_web_backend.py
tools/: sync_version.py
(+169 files in other folders)
