[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fpgacapzero"
# Single source of truth: VERSION file at the repo root.
# tools/sync_version.py also reads it to regenerate rtl/fcapz_version.vh
# so the Python package, the RTL VERSION register, and the ELA testbench
# all share one number.  CI runs the sync script with --check to block
# merges that would let them drift.
dynamic = ["version"]
description = "Open-source JTAG logic analyzer for Xilinx 7-series FPGAs"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
dependencies = [
    "tomli>=2.0.1; python_version < '3.11'",
    "tomli-w>=1.0.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]

[project.scripts]
fcapz = "fcapz.cli:main"
fcapz-gui = "fcapz.gui.main:main"
fcapz-mcp = "fcapz.mcp_server:main"

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.setuptools.packages.find]
where = ["host"]
include = ["fcapz*"]

[tool.setuptools.package-data]
"fcapz.gui" = ["assets/*.png", "assets/*.bin"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-qt>=4.2", "ruff>=0.4.0"]
gui = ["PySide6>=6.6", "pyqtgraph>=0.13"]
gui-preview = ["fpgacapzero[gui]"]
litex = ["litex"]
mcp = ["mcp>=1.26.0,<1.27.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:cacheprovider -m \"not hw\""
norecursedirs = ["tests/_tmp"]
markers = [
    "gui: Qt GUI integration tests (mocked JTAG; needs PySide6 + pytest-qt)",
    "hw: real hardware tests (opt-in: pytest -m hw; not run in default CI)",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W"]
